[package]
name = "alkahest-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alkahest_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "experimental-async", "eyre"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
alkahest-rs = { git = "https://github.com/coophive/alkahest-rs", branch = "simplify-oracle" }
futures-util = "0.3"
tokio = { version = "1.44", features = ["full"] }
alloy = { version = "=1.0.30", features = [
    "full",
    "node-bindings",
    "signers",
    "rlp",
    "eip712",
] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.31"
itertools = "0.14.0"
